# NebulaX-Desk

./: .gitignore  CMakeLists.txt  README.md
docs/: DESIGN.md  PROMPT.md
include/: protocol.h
qml/: Main.qml
qml/components/: DepthBar.qml  OrderCard.qml
qml/pages/: ConnectionPage.qml  MarketPage.qml  OrderListPage.qml  OrderPage.qml
scripts/: BUILD.md  build.sh
src/: ClientWorker.cpp  ClientWorker.h  main.cpp
test/: test_connect.cpp
